feat: added Clients screen

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -20,4 +20,7 @@
 @import './tablePlanning.scss';
 @import './costofSalesRegistration.scss';
 @import './expensesRegistration.scss';
+@import './Clients/ClientsRegistration.scss';
+@import './Clients/ClientsListAndEdit.scss';
+@import './AlertModal.scss';
 
