feat: created business divisions screens (STATIC DATA)

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -25,5 +25,7 @@
 @import './Clients/ClientsListAndEdit.scss';
 @import './AlertModal.scss';
 @import './expensesList.scss';
+@import './BusinessDivisions/BusinessDivisionsRegistration.scss';
+@import './BusinessDivisions/BusinessDivisionsListAndEdit.scss';
 
 
